[gd_scene load_steps=4 format=2]

[ext_resource path="res://Collectable.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 5.76151

[node name="Collectable" type="RigidBody2D"]
collision_layer = 2
collision_mask = 2
mass = 0.01
gravity_scale = 0.0
script = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
scale = Vector2( 0.148596, 0.148596 )
texture = ExtResource( 2 )

[node name="CollectableCollision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="CollectableCollision"]
scale = Vector2( 0.148596, 0.148596 )
texture = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
[connection signal="body_entered" from="." to="." method="_on_Collectable_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
